--- a/profile/additional.html
+++ b/profile/additional.html
@@ -7,7 +7,7 @@
     <!-- CSS only -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="script" href="profile.js">
-  <link rel="stylesheet" href="profile.css">
+  <link rel="stylesheet" href="myStyle.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>Document</title>
     
