--- a/tablesForms/registration.html
+++ b/tablesForms/registration.html
@@ -10,7 +10,7 @@
 
 <table border="1">
     <caption>Registration Form</caption>
-    <form action="submit_registration.php" method="POST">
+    <form action="Register.php" method="POST"> 
         <tr>
             <td>Name:</td>
             <td><input type="text" name="name" required></td>
