--- a/tablesForms/login.html
+++ b/tablesForms/login.html
@@ -10,7 +10,7 @@
 
 <table border="1">
     <caption>Login Form</caption>
-    <form action="submit_login.php" method="POST">
+    <form action="login.php" method="POST">
         <tr>
             <td>Email:</td>
             <td><input type="email" name="email" required></td>
